@startuml event object

abstract class Event<T> {
    + {abstract} apply(EventContext<T>): EventResult
}

record EventContext<T> {
    + target(): T
    + timeline(): Timeline
    + track(): Track
}

abstract class TimelineEvent {
}
Event <|-- TimelineEvent

abstract class TrackEvent {
    + getTrackId(): UUID
}
Event <|-- TrackEvent

abstract class ClipEvent {
    + getTrackId(): UUID
    + getClipId(): UUID
}
Event <|-- ClipEvent

@enduml
